# tlr-regedit-svn

branches/design-refactor-branch/: AUTHORS  ChangeLog  DESIGN  INSTALL  TODO  TODO.dnrb  kdbe.desktop  kdbe.kdevelop  kdbe.kdevelop.pcs  kdbe.pro  kdbe.spec  regedit.desktop  regedit.kdevelop  regedit.kdevelop.pcs  regedit.kdevses  regedit.pro  regedit.spec
branches/design-refactor-branch/autopackage/: default.apspec
branches/design-refactor-branch/docs/: editor.xmi
branches/design-refactor-branch/icons/: icons.pro  load_icons.sh  main.cpp
branches/design-refactor-branch/src/: CMakeLists.txt  command.cpp  command.h  editorcontroller.cpp  editorcontroller.h  editorview.cpp  editorview.h  editorviewui.ui  iobserver.h  keyaddcommand.cpp  keyaddcommand.h  keycomment.cpp  keycomment.h  keycommentui.ui  keymetainfo.cpp  keymetainfo.h  keymodifycommand.cpp  keymodifycommand.h  keyremovecommand.cpp  keyremovecommand.h  mainwidget.ui  mainwidgetimpl.cpp  mainwindowimpl.cpp  newdialog.ui  newkeywizard.cpp  newkeywizard.h  newkeywizard.ui  newkeywizardui.ui  observable.cpp  observable.h  permissiondialog.cpp  permissiondialog.h  permissiondialog.ui  permissiondialogimpl.h  permissiondialogui.ui  src.pro  usergroupdialog.cpp  usergroupdialog.h  usergroupdialogui.ui
branches/design-refactor-branch/src/xdgmime/: Makefile  xdgmime.pro
trunk/: CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  TODO  compile.sh  regedit.kdevelop  regedit.kdevelop.pcs  regedit.kdevses  regedit.pro  regedit.spec
trunk/autopackage/: default.apspec
trunk/autopackage/@registry.sourceforge.net/registry/: skeleton.1
trunk/src/: CMakeLists.txt  command.cpp  command.h  keyaddcommand.cpp  keyaddcommand.h  keymodifycommand.cpp  keymodifycommand.h  keyremovecommand.cpp  keyremovecommand.h  list.cpp  main.cpp  mainwidget.ui  mainwidgetimpl.cpp  mainwidgetimpl.h  mainwindowimpl.cpp  mainwindowimpl.h  newdialog.ui  newkeydialogimpl.cpp  newkeydialogimpl.h  permissiondialogimpl.cpp  permissiondialogimpl.h  regedit_globals.cpp  regedit_globals.h  src.pro  test.cpp
